# secure-cpp-pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
include/: dispatch.hpp  memory.hpp  myUnix.hpp  sockets.hpp  threadPool.hpp  verParser.hpp
src/: CMakeLists.txt  MemParser.cpp  dispatch.cpp  main.cpp  myUnix.cpp  sockets.cpp  threadPool.cpp  verParser.cpp
src/parsers/: memParser.cpp  verParser.cpp
src/utility/: myUnix.cpp  sockets.cpp
tests/: testDispatch.cpp  testMemParser.cpp  testMySocket.cpp  testMyUnix.cpp  testVerParser.cpp
